Made it so that the general info about machine learning is loaded into the website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-	</head>
-	<body>
-	</body>
+
+<head>
+	<title>Machine Learning</title>
+	<script src="scripts/embedHTML.js">
+
+	</script>
+</head>
+
+<body>
+	<div id="main">
+		<div embed-html="documents/text/generalInfo.html" />
+	</div>
+	<script>
+		embedHTML()
+	</script>
+</body>
+
 </html>
