--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
 <head>
 	<title>Machine Learning</title>
-	<script src="scripts/embedHTML.js">
-
-	</script>
+	<script src="scripts/embedHTML.js"></script>
+	<link rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
 <body>
 	<div id="main">
-		<div embed-html="documents/text/generalInfo.html" />
+		<div id="general-info" embed-html="documents/text/generalInfo.html" />
 	</div>
 	<script>
 		embedHTML()
