--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 	<title>Machine Learning</title>
 	<script src="scripts/embedHTML.js"></script>
+	<script src="scripts/popUp.js"></script>
 	<link rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
 <body>
-	<div id="main">
-		<div id="general-info" embed-html="documents/text/generalInfo.html" />
-	</div>
+	<div id="aboutUs" embed-html="aboutUs.html"></div>
+	<div id="general-info" embed-html="documents/text/generalInfo.html" />
 	<script>
 		embedHTML()
 	</script>
