--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	<div id="buttons">
 		<h2 class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span id="about-us-underline" class="underline" style="background-color:#90c53f;"></span></h2>
 		<h2 class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline')">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></h2>
-		<h2 class="underlineable" onclick="showPopUps(`subject-two`); updateUnderline('subject-two-underline')">Subject Two<span class="underline" id="subject-two-underline" style="background-color:#90c53f;"></span></h2>
+		<h2 class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline" style="background-color:#90c53f;"></span></h2>
 	</div>
 	<div id="about-us" embed-html="aboutUs.html" class="popup"></div>
 	<div id="limitations" embed-html="documents/text/limitations.html" class="popup"></div>
-	<div id="subject-two" embed-html="documents/text/subjectTwo.html" class="popup"></div>
+	<div id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></div>
 	<div id="general-info" embed-html="documents/text/generalInfo.html" />
 	<script>
 		embedHTML()
