Wrote about us section.

--- a/documents/text/aboutUsGeneral.html
+++ b/documents/text/aboutUsGeneral.html
@@ -1,1 +1,11 @@
-<p>this is a placeholder</p>
+<p>
+	This website was made by us, Tijmen and Marijn, as a project for our computer science class. We're both in our fourth learning year at the Sint-Maartenscollege located in Voorburg, the Netherlands.
+</p>
+
+<p>
+	The gap in experience between the both of us concerning writing code is quite big. Marijn has a lot more experience in this matter, while Tijmen is only starting out. However as Marijn hasn't written much code in HTML and CSS so that experience gap is closed a bit. Marijn is quite experienced in Javascript though and wrote all of the Javascript for this website.
+</p>
+
+<p> 
+  The reason we chose machine learning as our subject was that it looked the most appealing to the both of us when we looked at the list of subjects we were allowed to choose from. 
+</p>
