Removed auto-close from div as it's a non-void element

--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 
 <head>
 	<title>Machine Learning</title>
-	<script src="scripts/embedHTML.js">
-
-	</script>
-	<script src="scripts/popUp.js">
-
-	</script>
-	<script src="scripts/underline.js">
-
-	</script>
+	<script src="scripts/embedHTML.js"></script>
+	<script src="scripts/popUp.js"></script>
+	<script src="scripts/underline.js"></script>
 	<link rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
@@ -25,7 +19,7 @@
 	<div id="about-us" embed-html="aboutUs.html" class="popup"></div>
 	<div id="limitations" embed-html="documents/text/limitations.html" class="popup"></div>
 	<div id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></div>
-	<div id="general-info" embed-html="documents/text/generalInfo.html" />
+	<div id="general-info" embed-html="documents/text/generalInfo.html"></div>
 	<script>
 		embedHTML()
 	</script>
