Tijmen: wrote about page Tijmen Marijn: wrote Applications of Machine Learning

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<h2 class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline')">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></h2>
 		<h2 class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline" style="background-color:#90c53f;"></span></h2>
 	</div>
-	<div id="about-us" embed-html="aboutUs.html" class="popup"></div>
-	<div id="limitations" embed-html="documents/text/limitations.html" class="popup"></div>
-	<div id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></div>
-	<div id="general-info" embed-html="documents/text/generalInfo.html"></div>
+	<article id="about-us" embed-html="aboutUs.html" class="popup"></article>
+	<article id="limitations" embed-html="documents/text/limitations.html" class="popup"></article>
+	<article id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></article>
+	<article id="general-info" embed-html="documents/text/generalInfo.html"></article>
 	<script>
 		embedHTML()
 	</script>
