--- a/documents/text/applicationsOfMachineLearning.html
+++ b/documents/text/applicationsOfMachineLearning.html
@@ -1,1 +1,19 @@
 <p>
+	Machine Learning has a lot of real world applications. Here, we will be looking at 2 uses. One that has a real world use and one that is fun.
+</p>
+
+<p>
+	The first thing we will be looking at is GPT-3 (Generative Pre-trained Transformer 3). GPT-3 was created by OpenAI and is the third generation of the GPT-n series. GPT-3 is a Machine Learning algorithm specifically made to be able to generate text although it is also capable of writing basic code. GPT-3 has become so good that it has become next to impossible to disguise between text written by GPT-3 and text written by humans. Outside of it's higher capability to generate text, the text that is produced is significantly less toxic then it's predecesors.
+</p>
+
+<p>
+	An example of an application of GPT-3 can be found below:
+</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TfVYxnhuEdU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>
+	Machine Learning does not always need to be useful. Machine Learning can be found everywhere. You can write a Machine Learning algorithm to learn somethin new, to automate a boring task or to just play your game.
+</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JxdcuHXn9dc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
