Headlines documents + text added/changed

--- a/documents/text/aboutUsGeneral.html
+++ b/documents/text/aboutUsGeneral.html
@@ -9,3 +9,5 @@
 <p> 
   The reason we chose machine learning as our subject was that it looked the most appealing to the both of us when we looked at the list of subjects we were allowed to choose from. 
 </p>
+
+<h2>More details about us:</h2>
