--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
+
 	<title>Machine Learning</title>
+
 	<script src="scripts/embedHTML.js"></script>
+
 	<script src="scripts/popUp.js"></script>
+
 	<script src="scripts/underline.js"></script>
+
 	<link rel="stylesheet" href="stylesheets/main.css" />
+
 </head>
 
 <body>
+
 	<h1>Machine Learning</h1>
+
 	<div id="buttons">
-		<h2 class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span id="about-us-underline" class="underline" style="background-color:#90c53f;"></span></h2>
-		<h2 class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline')">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></h2>
-		<h2 class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline" style="background-color:#90c53f;"></span></h2>
+
+		<button class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span id="about-us-underline" class="underline" style="background-color:#90c53f;"></span></button>
+
+		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline')">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></button>
+
+		<button class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline" style="background-color:#90c53f;"></span></button>
+
 	</div>
+
 	<article id="about-us" embed-html="aboutUs.html" class="popup"></article>
+
 	<article id="limitations" embed-html="documents/text/limitations.html" class="popup"></article>
+
 	<article id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></article>
+
 	<article id="general-info" embed-html="documents/text/generalInfo.html"></article>
+
 	<script>
 		embedHTML()
 	</script>
+
 </body>
 
 </html>
