--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 	<script src="scripts/underline.js"></script>
 
+	<script src="scripts/modal.js"></script>
+
 	<link rel="stylesheet" href="stylesheets/main.css" />
 
 </head>
@@ -24,7 +26,7 @@
 
 		<button class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span id="about-us-underline" class="underline" style="background-color:#90c53f;"></span></button>
 
-		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline')">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></button>
+		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations<span class="underline" id="limitations-underline" style="background-color:#90c53f;"></span></button>
 
 		<button class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline" style="background-color:#90c53f;"></span></button>
 
@@ -37,6 +39,14 @@
 	<article id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></article>
 
 	<article id="general-info" embed-html="documents/text/generalInfo.html"></article>
+
+	<article class="modal-data" embed-html="documents/text/Tijmen.html"></article>
+
+	<article class="modal-data" embed-html="documents/text/Marijn.html"></article>
+
+	<article id="modal" class="modal">
+	<article id="modal-dialogue" embed-html="documents/text/Tijmen.html"></article>
+	</article>
 
 	<script>
 		embedHTML()
