Marijn: finished modal draft Tijmen: started on styling

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,5 +12,6 @@
 
 <h2>More details about us:</h2>
 
+<button onclick="setModalContent('about-marijn'); toggleModal()">Marijn Kneppers</button>
 
-<button onclick="toggleModal()">Marijn Kneppers</button>
+<button onclick="setModalContent('about-tijmen'); toggleModal()">Tijmen Groenevelt</button>
