Both: added subject and content area for form

--- a/documents/text/contact-us.html
+++ b/documents/text/contact-us.html
@@ -3,7 +3,7 @@
 
 	<br>
 
-	<input type="text" id="name" name="name" required/>
+	<input type="text" id="name" name="name" required />
 
 	<br> <br>
 
@@ -19,7 +19,7 @@
 
 	<br>
 
-	<input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0600000000" required/>
+	<input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0600000000" required />
 
 	<br> <br>
 
@@ -270,6 +270,24 @@
 		<option value="Zambia" />
 		<option value="Zimbabwe" />
 	</datalist>
+
+	<br> <br>
+
+	<label for="subject">Subject:</label>
+
+	<br>
+
+	<input type="text" id="subject" name="subject" required />
+
+	<br> <br> 
+
+	<label for="content">Content:</label>
+
+	<br>
+
+	<!-- fix resizing issue late -->
+
+	<textarea id="content" name="content" required></textarea>
 
 	<br> <br>
 
