Improved phone regex

--- a/documents/text/contact-us.html
+++ b/documents/text/contact-us.html
@@ -19,7 +19,7 @@
 
 	<br>
 
-	<input type="tel" id="phone" name="phone" pattern="[0-9]{10}" placeholder="0600000000" required />
+	<input type="tel" id="phone" name="phone" pattern="^[+]*[(]{0,1}[0-9]{1,4}[)]{0,1}[-\s\./0-9]*$" placeholder="0600000000" required />
 
 	<br> <br>
 
