Tijmen: favicon, logo, CSS improvements Marijn: general improvement

--- a/documents/text/Tijmen.html
+++ b/documents/text/Tijmen.html
@@ -1,14 +1,15 @@
 <p>
-	So more about me: <br>
-  I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands. I'm in the bilingual program
+	So more about me:
+	<br>
+	I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands. I'm in the bilingual program
 </p>
 
 <p>
-  My hobbies are playing the piano and scouting. I've played piano for about 5 years, and I've been doing scouting for about 6 years now. 
+	My hobbies are playing the piano and scouting. I've played piano for about 5 years, and I've been doing scouting for about 6 years now. 
 </p>
 
 <p>
-  I have basically no experience concerning writing code, so this was a good opportunity to learn a bit more. And learning new things which are in my interest is something I won't decline easily. 
+  	I have basically no experience concerning writing code, so this was a good opportunity to learn a bit more. And learning new things which are in my interest is something I won't decline easily. 
 </p>
 
 <h4>Contact info</h4>
