--- a/documents/text/contact-us.html
+++ b/documents/text/contact-us.html
@@ -285,9 +285,7 @@
 
 	<br>
 
-	<!-- fix resizing issue late -->
-
-	<textarea id="content" name="content" required></textarea>
+	<textarea id="content" name="content" style="max-width: 75%;" required></textarea>
 
 	<br> <br>
 
