--- a/documents/text/limitations.html
+++ b/documents/text/limitations.html
@@ -1,14 +1,23 @@
 <p>
-Although machine learning has a lot of potential, there ofcourse are limitations. This is caused by quite a lot of problems people who try imroving their machine learning programs. Some of these are for example the lack of data provided or the lack of acces to the data. The tasks combined with the available tools can also cause limitations to this development. 
+	Although machine learning has a lot of potential, there ofcourse are limitations. This is caused by quite a lot of problems
+	people who try imroving their machine learning programs. Some of these are for example the lack of data provided or the
+	lack of acces to the data. The tasks combined with the available tools can also cause limitations to this development.
 </p>
 
 <p>
-If there's something holding back the improvement of machine learning, you can also say it's society itself. To set an example, a "chatbot" was once in the making by Microsoft. They used Twitter to let it study the behavior of people while chatting. The problem wasn't the chatbot not picking up the language used, the problem was the language used it learned to use. Most of it was racist or sexist, meaning the project did have the wanted result in a way however Microsoft, obviously, didn't like the result too. 
+	If there's something holding back the improvement of machine learning, you can also say it's society itself. To set an example,
+	a "chatbot" was once in the making by Microsoft. They used Twitter to let it study the behavior of people while chatting.
+	The problem wasn't the chatbot not picking up the language used, the problem was the language used it learned to use. Most
+	of it was racist or sexist, meaning the project did have the wanted result in a way however Microsoft, obviously, didn't
+	like the result too.
 </p>
 
 <p>
-And of course, there is the case of "learning the wrong thing". This basically means that, for example, if a image classifier trained to recognize green parots or black rabits it could possibly mistake every green spot for a parot and a darker or completely black spot for a rabit. <br>
-Then how about try letting a program study specific pattern of pixels to try and identify objects in a picture? Just by simply changing a pixel, this would already get messed up. 
+	And of course, there is the case of "learning the wrong thing". This basically means that, for example, if a image classifier
+	trained to recognize green parots or black rabits it could possibly mistake every green spot for a parot and a darker or
+	completely black spot for a rabit.
+	<br>
+	Then how about try letting a program study specific pattern of pixels to try and identify objects in a picture? Just by simply changing a pixel, this would already get messed up. 
 </p> 
 
 <p>
