Improved file structure

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
 
 	</nav>
 
-	<article id="about-us" embed-html="aboutUs.html" class="popup"></article>
+	<article id="about-us" embed-html="pages/aboutUs.html" class="popup"></article>
 
-	<article id="limitations" embed-html="documents/text/limitations.html" class="popup"></article>
+	<article id="limitations" embed-html="pages/limitations.html" class="popup"></article>
 
-	<article id="applications-of-machine-learning" embed-html="documents/text/applicationsOfMachineLearning.html" class="popup"></article>
+	<article id="applications-of-machine-learning" embed-html="pages/applicationsOfMachineLearning.html" class="popup"></article>
 
-	<article id="general-info" embed-html="documents/text/generalInfo.html"></article>
+	<article id="general-info" embed-html="pages/generalInfo.html"></article>
 
-	<form id="contact-us" embed-html="documents/text/contact-us.html" class="popup" onsubmit="return false;"></form>
+	<form id="contact-us" embed-html="pages/contact-us.html" class="popup" onsubmit="return false;"></form>
 
-	<article id="about-tijmen" class="modal-data" embed-html="documents/text/Tijmen.html"></article>
+	<article id="about-tijmen" class="modal-data" embed-html="pages/Tijmen.html"></article>
 
-	<article id="about-marijn" class="modal-data" embed-html="documents/text/Marijn.html"></article>
+	<article id="about-marijn" class="modal-data" embed-html="pages/Marijn.html"></article>
 
 	<div id="glass-pane" class="glass-pane"></div>
 
 	<article id="modal" class="modal">
-		<button id="closeModalButton" onclick="toggleModal()">close</button>
+		<button id="closeModalButton" onclick="toggleModal()">x</button>
 		<article id="modal-dialogue"></article>
 	</article>
 
