--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -12,6 +12,6 @@
 
 <h3>More details about us:</h3>
 
-<button onclick="setModalContent('about-marijn'); toggleModal()">Marijn Kneppers</button>
+<button onclick="setModalContent('about-marijn'); toggleModal()" id="modal-activator">Marijn Kneppers</button>
 
-<button onclick="setModalContent('about-tijmen'); toggleModal()">Tijmen Groenevelt</button>
+<button onclick="setModalContent('about-tijmen'); toggleModal()" id="modal-activator">Tijmen Groenevelt</button>
