table added + table css

--- a/pages/generalInfo.html
+++ b/pages/generalInfo.html
@@ -4,7 +4,7 @@
 </p>
 
 <p>
-	There are three main types of Machine Learning: Supervised learning, unsupervised learning and reinforcement learning.
+	There are three main types of Machine Learning: supervised learning, unsupervised learning and learning
 </p>
 
 <p>
@@ -26,6 +26,32 @@
 	As it proceeds to try and complete its task, it is provided with points when it is doing good. It will try to maximize the
 	number of points it gets. It will also get penalties when it fails to execute its task. The algorithm will try to minimize
 	these punishments.
+</p>
+
+<p>So in short:<br>
+<table>
+	<caption>ML types and what's provided</caption>
+	<thead> 
+		<tr>
+			<th>Type</th>
+			<th>Provided with</th>
+		</tr>
+	</thead>
+	<tbdoy>
+		<tr>
+			<td>Supervised</td>
+			<td>Training data</td>
+		</tr>
+		<tr>
+			<td>Unsupervised</td>
+			<td>No training data</td>
+		</tr>
+		<tr>
+			<td>Reinforced</td>
+			<td>Dynamic environment</td>
+		</tr>
+	</tbdoy>
+</table>
 </p>
 
 <p>
