--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<header>
 
-		<img id="logo" src="images/logo.png"></img>
+		<img id="logo" src="images/logo.png" alt="logo image"></img>
 		
 		<h1 id="title">Machine Learning</h1>
 		
