--- a/pages/Marijn.html
+++ b/pages/Marijn.html
@@ -10,11 +10,10 @@
 	Although I have been programming for quite some time, I don't really have a lot of big projects. Some of my biggest works are <a href="https://youtu.be/X9eepvTdMLQ">Fyremoth</a>, a big mod for Hollow Knight and <a href="https://mandar1jn.itch.io/planet-clash">Planet Clash</a>, a game made in 24 hours using c99 and <a href="https://www.raylib.com/">raylib</a> for <a href="https://itch.io/jam/raylib-5k-gamejam">the raylib 5K jam</a>.
 </p>
 
-<h4>Contact info</h4>
+<h3>Contact info</h3>
 
-<ul>
-	<li>Name: Marijn Kneppers</li>
-	<li>E-mail: 110931@st-maartenscollege.nl</li>
-	<li>Phone: 0612455501</li>
-	<li>Country: Netherlands</li>
-</ul>
+
+<p>Name: Marijn Kneppers</p>
+<p>E-mail: 110931@st-maartenscollege.nl</p>
+<p>Phone: +31612455501</p>
+<p>Country: Netherlands</p>
