--- a/pages/Tijmen.html
+++ b/pages/Tijmen.html
@@ -1,22 +1,27 @@
 <p>
-	So more about me:
-	<br>
+	So some more things about me:
+</p>
+
+<br>
+	
+<p>
 	I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands. I'm in the bilingual program
 </p>
+	
+
 
 <p>
-	My hobbies are playing the piano and scouting. I've played piano for about 5 years, and I've been doing scouting for about 6 years now. 
+	My hobbies are scouting and playing the piano. I've been playing the piano for about 6 years, and I've also been doing scouting for about 6 years now. 
 </p>
+
 
 <p>
-  	I have basically no experience concerning writing code, so this was a good opportunity to learn a bit more. And learning new things which are in my interest is something I won't decline easily. 
+	I have basically no experience concerning writing code, so this was a good opportunity to 	learn a bit more. And learning new things which are in my interest is something I won't decline easily. 
 </p>
 
-<h4>Contact info</h4>
+<h3>Contact info</h3>
 
-<ul>
-	<li>Name: Tijmen</li>
-	<li>E-mail: 111001@st-maartenscollege.nl</li>
-	<li>Phone: 0623441599</li>
-	<li>Country: Netherlands</li>
-</ul>
+<p>Name: Tijmen</p>
+<p>E-mail: 111001@st-maartenscollege.nl</p>
+<p>Phone: +31623441599</p>
+<p>Country: Netherlands</p>
