Both: added ol with ul to abous us Tijmen: css lists

--- a/pages/Marijn.html
+++ b/pages/Marijn.html
@@ -1,5 +1,5 @@
 <p>
-	I'm 15 years old programming enthousiast currently following classes at the Sint-Maartenscollege in Voorburg, the Netherlands.
+	I'm a 15 years old programming enthousiast currently following classes at the Sint-Maartenscollege in Voorburg, the Netherlands.
 </p>
 
 <p>
@@ -9,6 +9,27 @@
 <p>
 	Although I have been programming for quite some time, I don't really have a lot of big projects. Some of my biggest works are <a href="https://youtu.be/X9eepvTdMLQ">Fyremoth</a>, a big mod for Hollow Knight and <a href="https://mandar1jn.itch.io/planet-clash">Planet Clash</a>, a game made in 24 hours using c99 and <a href="https://www.raylib.com/">raylib</a> for <a href="https://itch.io/jam/raylib-5k-gamejam">the raylib 5K jam</a>.
 </p>
+
+<p>
+	This reasons I chose for computer science are:
+</p>
+
+<ol>
+	<li>I already have experience with some programming languages. Namely:
+		<ul>
+			<li>C#</li>
+			<li>Typescript</li>
+			<li>java</li>
+			<li>C/C++</li>
+		</ul>
+	</li>
+	<li>
+		I wanted to find some likeminded people
+	</li>
+	<li>
+		I wanted to expand my knowledge about how computers work beyond what I already know
+	</li>
+</ol>
 
 <h3>Contact info</h3>
 
