--- a/pages/Tijmen.html
+++ b/pages/Tijmen.html
@@ -1,19 +1,26 @@
-<p>
-	So some more things about me:
-</p>
+<h3>Some things about me:</h3>
 
-<br>
-	
 <p>
 	I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands. I'm in the bilingual program
-</p>
-	
-
-
-<p>
+	<br>
 	My hobbies are scouting and playing the piano. I've been playing the piano for about 6 years, and I've also been doing scouting for about 6 years now. 
 </p>
 
+<p>
+	I'm capable of speaking 4 languages in total, though I'm far from fluent in some. Those 4 are:
+	<ol>
+		<li>Dutch</li>
+		<li>English</li>
+			<ul>
+				<li>Dutch and English are fluent</li>
+			</ul>
+		<li>German</li>
+		<li>French</li>
+			<ul>
+				<li>German and French aren't fluent</li>
+			</ul>
+	</ol>
+</p>
 
 <p>
 	I have basically no experience concerning writing code, so this was a good opportunity to 	learn a bit more. And learning new things which are in my interest is something I won't decline easily. 
