Marijn: improved file formatting, small css improvements and made modal work on all seemingly devices

--- a/pages/Tijmen.html
+++ b/pages/Tijmen.html
@@ -1,7 +1,8 @@
 <h3>Some things about me:</h3>
 
 <p>
-	I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands. I'm in the bilingual program
+	I'm 15 years old, and like stated before in my fourth learning year at the Sint-Maartenscollege in Voorburg, the Netherlands.
+	I'm in the bilingual program
 	<br>
 	My hobbies are scouting and playing the piano. I've been playing the piano for about 6 years, and I've also been doing scouting for about 6 years now. 
 </p>
