--- a/pages/generalInfo.html
+++ b/pages/generalInfo.html
@@ -8,23 +8,17 @@
 </p>
 
 <p>
-	Supervised learning algorithms first get a basic idea of their task by learning from training data. The training data is
-	data curated by humans from the Machine Learning algorithm to learn from. After this, the Machine Learning algorithm is
-	fed data that it has not yet trained on. Using this, it makes predictions of what it thinks will be the correct answer.
+	Supervised learning algorithms first get a basic idea of their task by learning from training data. The training data is data curated by humans from the Machine Learning algorithm to learn from. After this, the Machine Learning algorithm is fed data that it has not yet trained on. Using this, it makes predictions of what it thinks will be the correct answer.
 	After guessing an answer, it gets fed the answer and it can improve itself if the guess was incorrect.
 </p>
 
 <p>
-	Unsupervised learning algorithms are similar to supervised learning algorithms but do not get fed training data. It has to
-	find meaning and order in the data it is provided by itself. This can be a goal in itself. Finding order or sequences in
+	Unsupervised learning algorithms are similar to supervised learning algorithms but do not get fed training data. It has to find meaning and order in the data it is provided by itself. This can be a goal in itself. Finding order or sequences in
 	data.
 </p>
 
 <p>
-	The final one is quite different from the other two. A reinforcement learning algorithm is provided with a dynamic environment
-	on every sequence that varies between sequences. The algorithm is provided with a certain task. For example, drive a car.
-	As it proceeds to try and complete its task, it is provided with points when it is doing good. It will try to maximize the
-	number of points it gets. It will also get penalties when it fails to execute its task. The algorithm will try to minimize
+	The final one is quite different from the other two. A reinforcement learning algorithm is provided with a dynamic environment on every sequence that varies between sequences. The algorithm is provided with a certain task. For example, drive a car. As it proceeds to try and complete its task, it is provided with points when it is doing good. It will try to maximize the number of points it gets. It will also get penalties when it fails to execute its task. The algorithm will try to minimize
 	these punishments.
 </p>
 
@@ -55,7 +49,5 @@
 </p>
 
 <p>
-	There are a lot more types of machine learning, but these are the three most prominent ones. You may now be wondering what
-	the use is of Machine Learning. Machine Learning can be applied in situations where it is nearly impossible to write an
-	efficient and effective algorithm to complete a certain task. Some examples are speech recognition and computer vision.
+	There are a lot more types of machine learning, but these are the three most prominent ones. You may now be wondering what the use is of Machine Learning. Machine Learning can be applied in situations where it is nearly impossible to write an efficient and effective algorithm to complete a certain task. Some examples are speech recognition and computer vision.
 </p>
