Marijn: fixed video player sizes

--- a/pages/Marijn.html
+++ b/pages/Marijn.html
@@ -15,7 +15,7 @@
 </p>
 
 <ol>
-	<li>I already have experience with some programming languages. Namely:
+	<li>I already know some programming languages. Namely:
 		<ul>
 			<li>C#</li>
 			<li>Typescript</li>
@@ -27,7 +27,7 @@
 		I wanted to find some likeminded people
 	</li>
 	<li>
-		I wanted to expand my knowledge about how computers work beyond what I already know
+		I wanted to expand my knowledge about how computers work
 	</li>
 </ol>
 
