--- a/pages/applicationsOfMachineLearning.html
+++ b/pages/applicationsOfMachineLearning.html
@@ -10,10 +10,10 @@
 	An example of an application of GPT-3 can be found below:
 </p>
 
-<iframe width=100% height="315" src="https://www.youtube.com/embed/TfVYxnhuEdU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/TfVYxnhuEdU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video" allowfullscreen></iframe>
 
 <p>
 	Machine Learning does not always need to be useful. Machine Learning can be found everywhere. You can write a Machine Learning algorithm to learn somethin new, to automate a boring task or to just play your game.
 </p>
 
-<iframe width=100% height="315" src="https://www.youtube.com/embed/JxdcuHXn9dc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/JxdcuHXn9dc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video" allowfullscreen></iframe>
