Marijn: Improved button styling

--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
 
 	<nav id="buttons">
 
+		<button class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of ML<span class="underline" id="applications-of-machine-learning-underline"></span></button>
+
+		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations of ML<span class="underline" id="limitations-underline"></span></button>
+
 		<button class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span class="underline" id="about-us-underline"></button>
-    
-		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations<span class="underline" id="limitations-underline"></span></button>
-
-
-		<!-- todo find better name for button -->
-		<button class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of Machine Learning<span class="underline" id="applications-of-machine-learning-underline"></span></button>
 
 		<button class="underlineable" onclick="showPopUps(`contact-us`); updateUnderline('contact-us-underline')">Contact Us<span class="underline" id="contact-us-underline"></button>
 
