Marijn: updated internal id's for applications button and ordered css files

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	<nav id="buttons">
 
-		<button class="underlineable" onclick="showPopUps(`applications-of-machine-learning`); updateUnderline('applications-of-machine-learning-underline')">Applications of ML<span class="underline" id="applications-of-machine-learning-underline"></span></button>
+		<button class="underlineable" onclick="showPopUps(`applications`); updateUnderline('applications-underline')">Applications of ML<span class="underline" id="applications-underline"></span></button>
 
 		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations of ML<span class="underline" id="limitations-underline"></span></button>
 
@@ -54,7 +54,7 @@
 
 	<article id="limitations" embed-html="pages/limitations.html" class="popup"></article>
 
-	<article id="applications-of-machine-learning" embed-html="pages/applicationsOfMachineLearning.html" class="popup"></article>
+	<article id="applications" embed-html="pages/applicationsOfMachineLearning.html" class="popup"></article>
 
 	<article id="general-info" embed-html="pages/generalInfo.html"></article>
 
