--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<link rel="stylesheet" href="stylesheets/about-us.css" />
 
+	
 	<link rel="stylesheet" href="stylesheets/popup.css" />
 
 	<link rel="stylesheet" href="stylesheets/modal.css" />
@@ -40,13 +41,13 @@
 
 	<nav id="buttons">
 
-		<button class="underlineable" onclick="showPopUps(`applications`); updateUnderline('applications-underline')">Applications of ML<span class="underline" id="applications-underline"></span></button>
+		<button class="underlineable navbutton" onclick="showPopUps(`applications`); updateUnderline('applications-underline')">Applications of ML<span class="underline" id="applications-underline"></span></button>
 
-		<button class="underlineable" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations of ML<span class="underline" id="limitations-underline"></span></button>
+		<button class="underlineable navbutton" onclick="showPopUps(`limitations`); updateUnderline('limitations-underline');">Limitations of ML<span class="underline" id="limitations-underline"></span></button>
 
-		<button class="underlineable" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span class="underline" id="about-us-underline"></button>
+		<button class="underlineable navbutton" onclick="showPopUps(`about-us`); updateUnderline('about-us-underline')">About Us<span class="underline" id="about-us-underline"></button>
 
-		<button class="underlineable" onclick="showPopUps(`contact-us`); updateUnderline('contact-us-underline')">Contact Us<span class="underline" id="contact-us-underline"></button>
+		<button class="underlineable navbutton" onclick="showPopUps(`contact-us`); updateUnderline('contact-us-underline')">Contact Us<span class="underline" id="contact-us-underline"></button>
 
 	</nav>
 
